--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "gh-pages -d public"
   },
   "author": "",
   "license": "ISC",
+  "homepage" : "https://vloretocastillo.github.io/memory/",
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
